--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
 /* === theme style   ==== */
 
-a{
+ html{
+    scroll-behavior: smooth;    
+}
+
+ a{
      color: #17161a;
      transition: .5s;
 }
